fixed the spacing of the reservations button in the navbar

--- a/stylesheets/nav.css
+++ b/stylesheets/nav.css
@@ -2,6 +2,9 @@
   background: #990000;
   border-color: #990000;
   border-radius: 0px;
+  margin-left: 0px;
+  margin-right: 0px;
+  padding: 0px;
 }
 .navbar-default .navbar-brand {
   color: #ecf0f1;
@@ -33,7 +36,7 @@
 .navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
 .navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
   color: #ffffff;
-  background-color: #414141;
+  background-color: #202020;
 }
 .navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
   background-color: #990000;
